[package]
name = "three-random-bodies"
version = "0.0.1"
edition = "2021"
authors = ["Aleksei Batuhtin <full.naked.eye@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.2"
nalgebra = "=0.33.2"
ode_solvers = "0.6.1"
