[package]
name = "three-random-bodies"
version = "0.0.1"
edition = "2024"
authors = ["Aleksei Batuhtin <full.naked.eye@gmail.com>"]
readme = "README.md"
repository = "https://github.com/lelik-anabolek/three-random-bodies"
rust-version = "1.95.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.10.1"
nalgebra = "0.34.1"
ode_solvers = "0.6.2"
